# niodoo-hidden-state-steering

./: .gitignore  .snyk  AGENTS.md  CLAUDE.md  CREDITS.md  LICENSE  NOTICE.md  README.md  RUNBOOK.md  SCOREBOARD.md  SECURITY.md  STANDARDS.md  THIRD_PARTY_LICENSES.md  WHITEPAPER.md  claim_card.md  reproduce.sh  run_card_template.md
.github/workflows/: ci.yml
artifacts/: bridge_startup_log.txt
evidence/run_082923/selective/: stdout.txt
evidence/wobble/coins/: stdout.txt
evidence/wobble/days/: stdout.txt
evidence/wobble/sally/: stdout.txt
evidence/wobble/socks/: stdout.txt
harness/: run_battery.sh  score_answers.py
harness/runs/latch-0001/: card.md
harness/runs/latch-0002/: card.md
harness/runs/latch-0003/: card.md
harness/runs/latch-0004/: card.md
harness/runs/latch-0005/: card.md
harness/runs/latch-0006/: ans_off_211.err  ans_off_211.run_timing.json  ans_off_42.err  ans_off_42.run_timing.json  ans_on_211.err  ans_on_211.run_timing.json  ans_on_42.err  card.md  (+3 more)
harness/traps/: mult_mint_fire.txt  sweep_lettercount_arith.txt
niodoo/: Cargo.toml  build.rs
niodoo/memory/runtime_bridge/: niodoo_runtime_bridge.json
niodoo/src/: adapter.rs  cli.rs  config.rs  constants.rs  curator.rs  embeddings.rs  energy.rs  gaussian_rag.rs  hopfield.rs  ingest.rs  ipc.rs  kernels.cu  lib.rs  m3_compute.rs  main.rs  main_helpers.rs  main_helpers2.rs  main_helpers3.rs  manifold.rs  memory_system.rs  memory_topology.rs  model.rs  ontological_inversion.rs  organism.rs  principia.rs  rainbow_test.rs  ranking.rs  search.rs  secret_sauce_codec.rs  semantics.rs  server.rs  shader.wgsl  shadow_logger.rs  sheaf.rs  simulation.rs  splat_engine.rs  structs.rs  structs_v2_addon.rs  synapse.rs  tests.rs  (+4 more)
niodoo/src/bench/: beir.rs  mod.rs
niodoo/src/bridge/: adapter.rs  codebook.rs  codec_consensus.rs  correction.rs  correction_packets.rs  ghost_basin.rs  mod.rs  motif.rs  projection.rs  qdrant_adapter.rs  rave_codec.rs  registry.rs  secret_sauce.rs  smoke_test.rs  specialist.rs  specialist_bank.rs  startup_log.rs  tede_corrector.rs
niodoo/src/encoder/: disentangled.rs  gaussian.rs  mod.rs  rvq.rs  rvq_candle.rs  triplane.rs
niodoo/src/generative/: mod.rs  oscillatory_network.rs  oscillatory_neuron.rs  simulation_controller.rs
niodoo/src/genesis/: algebra.rs  mod.rs  semantics.rs  statistics.rs  tests.rs
niodoo/src/gpu/: context.rs  memory.rs  mod.rs  nbody.rs  retrieval.rs  rips.rs  test_integration.rs
niodoo/src/gpu/kernels/: apparent_pairs.cu  distance.cu  distance_matrix.cu  lock_free.cu
niodoo/src/gpu/lophat/: cpu.rs  cuda.rs  kernels.cu  memory.rs  mod.rs  test_gpu.rs
niodoo/src/indexing/: fingerprint.rs  mod.rs  persistent_homology.rs  tcs.rs  text_index.rs  vectorize.rs
niodoo/src/ingest/: shaper.rs
niodoo/src/language/: g_prime.rs  mod.rs
niodoo/src/learning/: daydream.rs  evolutionary.rs  mod.rs  parameters.rs  pinn.rs  tda_engine.rs
niodoo/src/linguistics/: english_dictionary.rs  gaussic_prime.rs  mod.rs
niodoo/src/llm/: hf_downloader.rs  loader.rs  mod.rs  ollama.rs  qwen.rs
niodoo/src/memory/: core_memories.rs  emotional.rs  mod.rs
niodoo/src/perceptual/: mod.rs  phase_locked_oscillator.rs  takens_embedding.rs  topological_perceiver.rs
niodoo/src/physics/: antigravity.rs  collider.rs  forward_profile.rs  gaussian.rs  gpu_engine.rs  gqa_attention.rs  inverse_cube.cu  mitosis.rs  mod.rs  naked_llama.rs  optimizer.rs  quantized_llama.rs  qwen35_hybrid.rs  registry.rs  safety.rs  sensors.rs  spatial_hash.rs  steering.rs  tissue.rs  torsion.rs  vae.rs  vsa.rs  websocket.rs
niodoo/src/regulation/: emergence_controller.rs  mod.rs  topological_homeostasis.rs  wundt_optimizer.rs
niodoo/src/rendering/: inverse.rs
niodoo/src/retrieval/: advanced.rs  dual_process.rs  fitness.rs  hippocampal.rs  hybrid.rs  mod.rs
niodoo/src/runtime/: activation.rs  active_context.rs  control_surface.rs  drift_watchdog.rs  finalization.rs  gmms_observe_dump.rs  metric_print.rs  mistake_memory.rs  mistake_reflex.rs  mod.rs  secret_sauce_codec.rs  state_types.rs  tda_monitor.rs  telemetry.rs  timing.rs  vault_retrieval.rs
niodoo/src/shaders/: dream_physics.wgsl  flocking.wgsl  m3_compute.wgsl  memory_attention.wgsl  particles.wgsl
niodoo/src/storage/: engine.rs  hnsw.rs  memory.rs  mod.rs  transaction.rs
niodoo/src/token_promotion/: dynamic_tokenizer.rs  engine.rs  mod.rs  pattern_discovery.rs  simulation.rs  spatial.rs
niodoo/src/utils/: fidelity.rs  mod.rs
runs/: phase0_claim_card_20260701.txt  phase0_claim_card_default_fixed.txt  phase0_narration_diag.md
scripts/: convert_tede_to_safetensors.py  generate_third_party_licenses.py
(+15 files in other folders)
