[package]
name = "niodoo"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A small local runtime that steers a frozen language model through its hidden state."

[lib]
name = "niodoo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "5447a8779871654e542e65693e7d26f1e33b215f", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "5447a8779871654e542e65693e7d26f1e33b215f", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", rev = "5447a8779871654e542e65693e7d26f1e33b215f", features = ["cuda"] }
clap = { version = "4.6", features = ["derive", "env"] }
safetensors = "0.4.5"
half = "2.7.1"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
friedrich = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde-big-array = "0.5"
rkyv = { version = "0.7", features = ["validation"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rayon = "1.11"
memmap2 = "0.9"
bytemuck = "1.14"
glam = "0.27"
cudarc = { version = "0.17", features = ["runtime", "nvrtc", "cuda-13000"] }
flate2 = "1.0"
tantivy = "0.26"
chrono = { version = "0.4", features = ["serde"] }
statrs = "0.16"
wgpu = "0.19"
hnsw_rs = "0.2"
ndarray = "0.15"
ndarray-npy = "0.8"
ed25519-dalek = { version = "2.0", features = ["serde"] }
sha2 = "0.10"
shared_memory = "0.12"
notify = "6.0"
rusqlite = { version = "0.30", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
hf-hub = "0.3"
native-tls = { version = "0.2", features = ["vendored"] }
lophat = { version = "0.1", optional = true }
bincode = "1.3"
urlencoding = "2.1"
md5 = "0.7"
regex = "1"
toml = "1.1.2"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["cuda"]
cuda = []
topology = ["dep:lophat"]
full_library = ["topology"]
niodv4_bridge = []

[[bin]]
name = "niodoo"
path = "src/main.rs"
